--- a/activiti-api/activiti-api-process-model-impl/pom.xml
+++ b/activiti-api/activiti-api-process-model-impl/pom.xml
@@ -25,7 +25,7 @@
     <relativePath>../activiti-api-dependencies</relativePath>
   </parent>
   <artifactId>activiti-api-process-model-impl</artifactId>
-  <name>Activiti API :: Process Model Implementation</name>
+  <name>Activiti :: API :: Process Model Implementation</name>
   <dependencies>
     <dependency>
       <groupId>org.activiti.api</groupId>
