--- a/activiti-core-common/activiti-common-util/pom.xml
+++ b/activiti-core-common/activiti-common-util/pom.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti.core.common</groupId>
@@ -8,11 +8,8 @@
     <version>7.1.0-SNAPSHOT</version>
   </parent>
   <artifactId>activiti-common-util</artifactId>
-  <name>activiti-common-util</name>
+  <name>Activiti :: Common :: Util</name>
   <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <dependencies>
     <!-- Optional -->
     <dependency>
@@ -20,7 +17,6 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
       <optional>true</optional>
     </dependency>
-    
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
@@ -28,15 +24,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-	  <groupId>org.springframework.boot</groupId>
-	  <artifactId>spring-boot-starter-test</artifactId>
-	  <scope>test</scope>
-	</dependency>
-	<dependency>
-	  <groupId>org.assertj</groupId>
-	  <artifactId>assertj-core</artifactId>
-	  <scope>test</scope>
-	</dependency>
-    
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
