--- a/activiti-core-common/activiti-core-common-dependencies/pom.xml
+++ b/activiti-core-common/activiti-core-common-dependencies/pom.xml
@@ -25,75 +25,75 @@
   </parent>
   <artifactId>activiti-core-common-dependencies</artifactId>
   <packaging>pom</packaging>
-  <name>Activiti Core Common :: Dependencies BOM (Bill Of Materials)</name>
+  <name>Activiti :: Core :: Common :: Dependencies BOM (Bill Of Materials)</name>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-dependencies</artifactId>
-        <version>${activiti-api.version}</version>
+        <version>${project.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-connector-model</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-application</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-connector</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-identity</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-security</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-security-policies</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-core-test-assertions</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-core-test-local-runtime</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-resource-finder</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-project-model</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-spring-project</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-common-util</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
