--- a/activiti-dependencies/dependencies-tests/pom.xml
+++ b/activiti-dependencies/dependencies-tests/pom.xml
@@ -1,28 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.activiti.dependencies</groupId>
     <artifactId>activiti-dependencies-parent</artifactId>
     <version>7.1.0-SNAPSHOT</version>
   </parent>
-
   <artifactId>activiti-dependencies-tests</artifactId>
   <packaging>pom</packaging>
   <name>Activiti :: BOM (Bill of Materials) Tests</name>
-
   <properties>
     <maven.deploy.skip>true</maven.deploy.skip>
-    <enforceFail>true</enforceFail>    
   </properties>
-
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M2</version>
         <executions>
           <execution>
             <id>enforce-dependency-convergence</id>
@@ -30,12 +26,12 @@
               <goal>enforce</goal>
             </goals>
             <configuration>
-              <fail>${enforceFail}</fail>
+              <fail>true</fail>
               <rules>
                 <reactorModuleConvergence>
                   <message>The reactor is not valid</message>
                   <ignoreModuleDependencies>false</ignoreModuleDependencies>
-                </reactorModuleConvergence>              
+                </reactorModuleConvergence>
                 <dependencyConvergence/>
               </rules>
             </configuration>
@@ -51,5 +47,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
