--- a/activiti-dependencies/dependencies/pom.xml
+++ b/activiti-dependencies/dependencies/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -8,34 +9,31 @@
     <version>7.1.0-SNAPSHOT</version>
   </parent>
   <packaging>pom</packaging>
-
   <artifactId>activiti-dependencies</artifactId>
   <name>Activiti :: BOM (Bill of Materials)</name>
-
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.activiti.api</groupId>
         <artifactId>activiti-api-dependencies</artifactId>
-        <version>${activiti-api.version}</version>
+        <version>${project.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.activiti.core.common</groupId>
         <artifactId>activiti-core-common-dependencies</artifactId>
-        <version>${activiti-core-common.version}</version>
+        <version>${project.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>org.activiti</groupId>
         <artifactId>activiti-core-dependencies</artifactId>
-        <version>${activiti.version}</version>
+        <version>${project.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
-  
 </project>
