--- a/pom.xml
+++ b/pom.xml
@@ -63,28 +63,26 @@
     <asm.version>6.2</asm.version>
     <assertj-assertions-generator-maven-plugin.version>2.2.0</assertj-assertions-generator-maven-plugin.version>
     <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
-    <dependency-check-maven.version>3.1.2</dependency-check-maven.version>
+    <dependency-check-maven.version>5.3.0</dependency-check-maven.version>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     <extra-enforcer-rules.version>1.2</extra-enforcer-rules.version>
     <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
-    <jgitflow-maven-plugin.version>1.0-m5.1</jgitflow-maven-plugin.version>
     <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
-    <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
+    <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
-    <!-- had to downgrade failsafe plugin to avoid sun.reflect.annotation.TypeNotPresentExceptionProxy error in activiti-cloud-query
-    workaround for https://github.com/spring-projects/spring-boot/issues/6254-->
-    <maven-failsafe-plugin.version>3.0.0-M3</maven-failsafe-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+    <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
-    <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+    <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
     <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
-    <maven-site-plugin.version>3.8.2</maven-site-plugin.version>
-    <maven-source-plugin.version>3.1.0</maven-source-plugin.version>
-    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+    <maven-site-plugin.version>3.7.1</maven-site-plugin.version>
+    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+    <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
 
     <java.version>8</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -95,14 +93,13 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <!-- configuration properties for tests-->
-    <generated-assertions-folder>${project.build.directory}/generated-test-sources/assertions
-    </generated-assertions-folder>
+    <generated-assertions-folder>${project.build.directory}/generated-test-sources/assertions</generated-assertions-folder>
     <generated-assertions-package>org.activiti.test</generated-assertions-package>
     <!-- JVM params for test execution -->
     <argLine>-Duser.language=en</argLine>
 
     <!-- dependency -->
-    <spring-boot.version>2.1.10.RELEASE</spring-boot.version>
+    <spring-boot.version>2.1.11.RELEASE</spring-boot.version>
 
     <skipITs>true</skipITs>
   </properties>
@@ -123,7 +120,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
-          <version>2.7</version>
+          <version>${versions-maven-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -179,6 +176,7 @@
                 <consoleOutput>false</consoleOutput>
                 <logViolationsToConsole>false</logViolationsToConsole>
                 <failsOnError>false</failsOnError>
+                <linkXRef>false</linkXRef>
               </configuration>
             </execution>
           </executions>
@@ -236,23 +234,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>${maven-source-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>external.atlassian.jgitflow</groupId>
-          <artifactId>jgitflow-maven-plugin</artifactId>
-          <version>${jgitflow-maven-plugin.version}</version>
-          <configuration>
-            <enableFeatureVersions>true</enableFeatureVersions>
-            <autoVersionSubmodules>true</autoVersionSubmodules>
-            <allowSnapshots>true</allowSnapshots>
-            <noDeploy>false</noDeploy>
-            <useReleaseProfile>true</useReleaseProfile> <!-- Do not generate javadoc when releasing -->
-            <pushReleases>true</pushReleases>
-            <squash>false</squash>
-            <keepBranch>true</keepBranch>
-            <noFeatureBuild>true</noFeatureBuild>
-            <noFeatureMerge>true</noFeatureMerge>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -331,7 +312,7 @@
           </dependency>
         </dependencies>
         <executions>
-          <!-- <execution>
+          <execution>
             <id>enforce-java</id>
             <goals>
               <goal>enforce</goal>
@@ -343,7 +324,7 @@
                 </requireJavaVersion>
               </rules>
             </configuration>
-          </execution> -->
+          </execution>
           <execution>
             <id>enforce-maven</id>
             <goals>
